--- a/public/css/style.css
+++ b/public/css/style.css
@@ -212,9 +212,11 @@ body {
 .tax-toggle {
     border: 1px solid black;
     border-radius: 1rem;
-    height: 3.25rem;
+    height: fit-content;
     padding: 1rem;
     margin-left: 2rem;
     display: flex;
     align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
